# htmx-playground

./: CHANGELOG.md  README.md  flake.nix  hie.yaml  htmx-playground.cabal  mono-hackage.cabal
app/: Main.hs
src/: Chat.hs  Cli.hs
