cabal-version:      2.4
name:               htmx-playground
version:            0.1.0.0
homepage:           https://github.com/morucci/htmx-playground#README.md
bug-reports:        https://github.com/morucci/htmx-playground/issues
synopsis:           HTMX Playground
description:        HTMX PLayground
license-file:       LICENSE
author:             Fabien Boucher
maintainer:         fabien.dot.boucher@gmail.com
copyright:          2022 Fabien Boucher
extra-source-files:
    README.md

common common-options
    default-language: Haskell2010
    default-extensions: LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , NamedFieldPuns
                      , DeriveGeneric
    ghc-options:      -Wall
                      -threaded

    build-depends:    base < 5

library
    import:           common-options
    exposed-modules:  Cli
                    , Chat
    build-depends:    servant
                    , servant-lucid
                    , servant-server
                    , servant-websockets
                    , servant-xstatic
                    , lucid
                    , lucid-xstatic
                    , string-interpolate
                    , aeson
                    , async
                    , lens
                    , lens-aeson
                    , text
                    , time
                    , stm
                    , http-api-data
                    , wai
                    , warp
                    , websockets
                    , xstatic
                    , xstatic-hyperscript
                    , xstatic-htmx
                    , xstatic-tailwind
    hs-source-dirs:   src

executable htmx-playground
    import:           common-options
    main-is:          Main.hs

    build-depends:    htmx-playground

    hs-source-dirs:   app
    default-language: Haskell2010
