cabal-version:      2.4
name:               mono-hackage
version:            0.1.0.0
homepage:           https://github.com/change-metrics/mono-hackage#README.md
bug-reports:        https://github.com/change-metrics/mono-hackage/issues
synopsis:           Mono Hackage
description:        Build a Monocle tenant config from Hackage
license-file:       LICENSE
author:             Fabien Boucher
maintainer:         fabien.dot.boucher@gmail.com
copyright:          2022 Fabien Boucher
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

common common-options
    default-language: Haskell2010
    default-extensions: LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , NamedFieldPuns
                      , DeriveGeneric
    ghc-options:      -Wall
                      -threaded

    build-depends:    base < 5

library
    import:           common-options
    exposed-modules:  Cli
    build-depends:    servant-client
    hs-source-dirs:   src

executable mono-hackage
    import:           common-options
    main-is:          Main.hs

    build-depends:    mono-hackage

    hs-source-dirs:   app
    default-language: Haskell2010
